base/monitoring/open-cost/ingress/traefik-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors
  namespace: ${TARGET_NAMESPACE}
spec:
  headers:
    accessControlAllowOriginList:
      - "*"
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowHeaders:
      - "*"
    accessControlAllowCredentials: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: buffering
  namespace: ${TARGET_NAMESPACE}
spec:
  buffering:
    maxRequestBodyBytes: 10737418240  # 10GB
---
