base/monitoring/open-cost/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ${CLUSTER_ISSUER}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: ${TARGET_NAMESPACE}-oauth-errors@kubernetescrd,${TARGET_NAMESPACE}-oauth-auth@kubernetescrd,${TARGET_NAMESPACE}-sticky@kubernetescrd,${TARGET_NAMESPACE}-cors@kubernetescrd,${TARGET_NAMESPACE}-buffering@kubernetescrd
  name: open-cost-ingress
spec:
  rules:
  - host: ${DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: open-cost-opencost
            port:
              number: 9090
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ${DOMAIN}
    secretName: ${DOMAIN}-tls
